--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kreative</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,14 +20,15 @@
         <h1>Kreative</h1>
     </div>
 
-    <ul class="menu__seznam">
-    <li class="menu__button">
-        <img src="ikons/taska.svg" alt="gift_icon">
-        <a href="#" class="menu__link">dárky</a>
-    </li>
+    <!--<ul class="menu__seznam">-->
+        <div style="display:flex; flex-direction: column; justify-content: center; align-items: center; width: 25px">
+    <div class="menu__button menu__button-taska  menu__link">
+        <a href="https://www.seznam.cz/" class=""></a>
+    </div>
+    <div>clanek</div>
+    </div>
 
-
-    <li class="menu__button">
+    <!--<li class="menu__button">
         <img src="ikons/tuzka.svg" alt="blog">
         <a href="#" class="menu__link">blog</a>
     </li>
@@ -41,7 +42,7 @@
         <img src="ikons/kosik.svg" alt="basket_icon">
         <a href="#" class="menu__link">košík</a>
     </li>
-    </ul>
+    </ul>-->
 
 
 <h2>kreativní dárky</h2>
@@ -52,12 +53,14 @@
 
 <div class="produkt">
     <div class="obr--produkt">
-        <img src="obr/d0e60a4473f5c902e067fcc08413d8fa.jpg" alt="produkt karty">
+       
     </div>
     <div class="popisek--produkt">
         <h4>Designový balíček karet</h4>
+        <div>
         <p>ke koupi</p>
         <img src="ikons/sipka_vpravo.svg" alt="sipka produkt">
+    </div>
     </div>
 </div>
 
